Revision history for Perl extension {{$dist->name}}

{{$NEXT}}

2.04      2013-07-25 17:29:10 America/Vancouver
    - fix installation failures with Test::Kwalitee 1.09 (issue #4,
      harleypig's repo)

2.03      2011-10-19 08:56:47 America/Boise

2.020000  2011-09-07 20:47:05 America/Boise
    - Provide a deprecation warning (Mike Doherty)
    - Moved switch_namespace branch to master ( HarleyPig )
    - brought dist.ini up to date ( HarleyPig )

1.112410  2011-08-29 09:57:31 America/Boise
    - Made pod coverage test pass ( HarleyPig )
    - Fixed error with tests needing 'plan' defined ( Kent Fredric)
    - Replace 2-phase inject/munge with 1-phase inject ( Kent Fredric )
    - Add some tests for our test being run ( Kent Fredric )

1.112400  2011-08-28 09:34:37 America/Boise

1.112390  2011-08-26 21:11:01 America/Boise

1.101420  2010-05-22 17:47:26 Europe/Vienna
    - removed weaver.ini since that's handled in Dist::Zilla's [@MARCEL] now
    - list Test::Kwalitee in dist.ini so we don't use() it anymore

1.100690  2010-03-10 23:43:35 Europe/Vienna
    - original version